--- a/src/main/resources/com/example/sampc482pa/main-view.fxml
+++ b/src/main/resources/com/example/sampc482pa/main-view.fxml
@@ -1,16 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="1093.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sampc482pa.MainController">
    <children>
-      <Label layoutX="229.0" layoutY="177.0" text="Main View">
+      <Label layoutX="16.0" layoutY="14.0" text="Inventory Management System">
          <font>
-            <Font size="31.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
+      <AnchorPane layoutX="16.0" layoutY="64.0" prefHeight="301.0" prefWidth="524.0" style="-fx-border-color: BLACK; -fx-border-radius: 10;">
+         <children>
+            <TableView layoutX="22.0" layoutY="50.0" prefHeight="180.0" prefWidth="378.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
+              <columns>
+                <TableColumn prefWidth="60.5" text="Part ID" />
+                <TableColumn prefWidth="179.0" text="Part Name" />
+                  <TableColumn prefWidth="100.0" text="Inventory Level" />
+                  <TableColumn prefWidth="144.5" text="Price/Cost per Unit" />
+              </columns>
+            </TableView>
+            <Label layoutX="32.0" layoutY="17.0" text="Parts">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <GridPane hgap="3.0" layoutX="349.0" layoutY="268.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="partAddButton" mnemonicParsing="false" onAction="#loadAddPartForm" text="Add" />
+                  <Button fx:id="partModifyButton" mnemonicParsing="false" text="Modify" GridPane.columnIndex="1" />
+                  <Button fx:id="partDeleteButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <TextField fx:id="partsSearchBox" layoutX="303.0" layoutY="13.0" prefHeight="25.0" prefWidth="199.0" promptText="Search by Part ID or Name" />
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+      </AnchorPane>
+      <AnchorPane layoutX="554.0" layoutY="64.0" prefHeight="301.0" prefWidth="524.0" style="-fx-border-color: BLACK; -fx-border-radius: 10;">
+         <children>
+            <TableView layoutX="22.0" layoutY="50.0" prefHeight="180.0" prefWidth="378.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
+               <columns>
+                  <TableColumn prefWidth="72.3333740234375" text="Product ID" />
+                  <TableColumn prefWidth="167.6666259765625" text="Product Name" />
+                  <TableColumn prefWidth="100.0" text="Inventory Level" />
+                  <TableColumn prefWidth="144.5" text="Price/Cost per Unit" />
+               </columns>
+            </TableView>
+            <Label layoutX="32.0" layoutY="17.0" text="Products">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <GridPane hgap="3.0" layoutX="349.0" layoutY="268.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="productAddButton" mnemonicParsing="false" text="Add" />
+                  <Button fx:id="productModifyButton" mnemonicParsing="false" text="Modify" GridPane.columnIndex="1" />
+                  <Button fx:id="productDeleteButton" mnemonicParsing="false" text="Delete" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <TextField fx:id="productsSearchBox" layoutX="303.0" layoutY="13.0" prefHeight="25.0" prefWidth="199.0" promptText="Search by Product ID or Name" />
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+      </AnchorPane>
+      <Button fx:id="exitButton" layoutX="1026.0" layoutY="380.0" mnemonicParsing="false" onAction="#exit" text="Exit" />
    </children>
 </AnchorPane>
